--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,17 +8,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MaterialTheme">
-        <activity android:name=".activities.ToolbarActivity"></activity>
-        <activity android:name=".activities.RecyclerViewActivity">
-
-        </activity>
+        <activity android:name=".activities.ToolbarActivity" />
+        <activity android:name=".activities.RecyclerViewActivity"></activity>
         <activity android:name=".activities.NavigationDrawerActivity">
+        </activity>
+        <activity android:name=".activities.AnimationsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.TransitionActivity"></activity>
+        <activity android:name=".activities.SharedElementActivity"></activity>
     </application>
 
 </manifest>
