--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,19 @@
         android:supportsRtl="true"
         android:theme="@style/MaterialTheme">
         <activity android:name=".activities.ToolbarActivity" />
-        <activity android:name=".activities.RecyclerViewActivity"></activity>
-        <activity android:name=".activities.NavigationDrawerActivity">
-        </activity>
+        <activity android:name=".activities.RecyclerViewActivity" />
+        <activity android:name=".activities.NavigationDrawerActivity"></activity>
         <activity android:name=".activities.AnimationsActivity">
+        </activity>
+        <activity android:name=".activities.TransitionActivity" />
+        <activity android:name=".activities.SharedElementActivity" />
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.TransitionActivity"></activity>
-        <activity android:name=".activities.SharedElementActivity"></activity>
     </application>
 
 </manifest>
