--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         </activity>
         <activity android:name=".activities.SimpleViewPagerActivity" />
         <activity android:name=".activities.FragmentViewPagerActivity" />
-        <activity android:name=".activities.TabsActivity"></activity>
+        <activity android:name=".activities.TabsActivity" />
+        <activity android:name=".activities.SnackbarActivity"></activity>
     </application>
 
 </manifest>
