--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,10 @@ android {
     compileSdkVersion 23
     buildToolsVersion '25.0.0'
 
+    compileOptions.incremental = false
+
     defaultConfig {
-        applicationId "com.smth.androidware"
+        applicationId "com.enginizer"
         minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
@@ -33,11 +35,13 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'com.android.support:cardview-v7:23.2.1'
     compile 'com.android.support:design:23.3.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:23.4.0'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'com.google.android.gms:play-services:10.2.0'
     compile 'com.google.android.gms:play-services-analytics:10.0.1'
     compile 'com.android.support:multidex:1.0.1'
+    compile "com.google.dagger:dagger:2.9"
+    apt "com.google.dagger:dagger-compiler:2.9"
+    provided 'javax.annotation:jsr250-api:1.0'
 }
