--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MaterialTheme"
-        android:name=".application.AnalythicsApplication">
+        android:name=".EnginizerApplication">
         <activity
             android:name="com.enginizer.activities.MainActivity"
             android:label="@string/title_activity_main"
@@ -57,6 +57,7 @@
             </intent-filter>
         </receiver>
 
+        <service android:name=".service.NotificationActionService" android:exported="false" />
 
     </application>
 
