--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,18 @@ dependencies {
     compile "com.google.dagger:dagger:2.9"
     apt "com.google.dagger:dagger-compiler:2.9"
     provided 'javax.annotation:jsr250-api:1.0'
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2
+    compile group: 'org.apache.commons', name: 'commons-configuration2', version: '2.1.1'
+    // https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils
+    compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
+//    compile 'com.google.android.gms:play-services-auth:10.0.1'
+//    compile 'pub.devrel:easypermissions:0.2.1'
+//    compile('com.google.api-client:google-api-client-android:1.22.0') {
+//        exclude group: 'org.apache.httpcomponents'
+//    }
+//    compile('com.google.apis:google-api-services-calendar:v3-rev239-1.22.0') {
+//        exclude group: 'org.apache.httpcomponents'
+//    }
+
+
 }
