--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.enginizer">
 
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="18"
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -58,16 +58,25 @@
             </intent-filter>
         </receiver>
 
-        <receiver
-            android:name=".receivers.CalendarNotificationBroadcastReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.EVENT_REMINDER"/>
-                <data android:scheme="content"/>
-                <data android:host="com.android.calendar"/>
-            </intent-filter>
-        </receiver>
+        <!--<receiver-->
+            <!--android:name=".receivers.CalendarNotificationBroadcastReceiver">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.EVENT_REMINDER"/>-->
+                <!--<data android:scheme="content"/>-->
+                <!--<data android:host="com.android.calendar"/>-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
 
-        <service android:name=".service.NotificationActionService" android:exported="false" />
+
+    <service android:name=".service.CalendarNotificationListenerService"
+        android:label="@string/app_name"
+        android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+        <intent-filter>
+            <action android:name="android.service.notification.NotificationListenerService" />
+        </intent-filter>
+    </service>
+
+    <service android:name=".service.NotificationActionService" android:exported="false" />
 
     </application>
 
